--- a/index.html
+++ b/index.html
@@ -1,23 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>Three TransformControls Test</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>
-      html, body {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        height: 100%;
-        background: #111;
-      }
-      canvas {
-        display: block;
-      }
-    </style>
-
-    <script type="importmap">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ThreeJS build-up 02</title>
+    <link rel="stylesheet" href="./src/style.css" />
+        <script type="importmap">
     {
       "imports": {
         "three": "https://unpkg.com/three@0.161.0/build/three.module.js",
@@ -30,7 +18,33 @@
     </script>
   </head>
   <body>
-    <canvas id="scene"></canvas>
+    <div id="app">
+      <!-- left: 3D viewport -->
+      <div id="viewport">
+        <canvas id="scene"></canvas>
+      </div>
+
+      <!-- right: UI panel -->
+      <aside id="ui">
+        <h1>Transform</h1>
+
+        <div class="field">
+          <label for="posX">Position X</label>
+          <input id="posX" type="number" step="0.01" />
+        </div>
+
+        <div class="field">
+          <label for="posY">Position Y</label>
+          <input id="posY" type="number" step="0.01" />
+        </div>
+
+        <div class="field">
+          <label for="posZ">Position Z</label>
+          <input id="posZ" type="number" step="0.01" />
+        </div>
+      </aside>
+    </div>
+
     <script type="module" src="./dist/main.js"></script>
   </body>
 </html>
