--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ThreeJS build-up 02</title>
     <link rel="stylesheet" href="./src/style.css" />
-        <script type="importmap">
+    <script type="importmap">
     {
       "imports": {
         "three": "https://unpkg.com/three@0.161.0/build/three.module.js",
@@ -16,44 +17,84 @@
       }
     }
     </script>
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="app">
-      <!-- left: 3D viewport -->
-      <div id="viewport">
-        <canvas id="scene"></canvas>
-      </div>
+        <!-- left: 3D viewport -->
+        <div id="viewport">
+            <canvas id="scene"></canvas>
+        </div>
 
-      <!-- right: UI panel -->
-<aside id="ui">
-  <h1>Transform</h1>
+        <!-- right: UI panel -->
+        <aside id="ui">
+            <h1>Transform</h1>
 
-  <div id="gizmo-modes" class="mode-buttons">
-    <button data-mode="translate" class="active">Move</button>
-    <button data-mode="rotate">Rotate</button>
-    <button data-mode="scale">Scale</button>
-  </div>
+            <!-- gizmo modes -->
+            <div id="gizmo-modes" class="mode-buttons">
+                <button data-mode="translate" class="active">Move</button>
+                <button data-mode="rotate">Rotate</button>
+                <button data-mode="scale">Scale</button>
+            </div>
 
-  <hr />
+            <!-- gizmo space -->
+            <div id="gizmo-space" class="mode-buttons">
+                <button data-space="world" class="active">World</button>
+                <button data-space="local">Local</button>
+            </div>
 
-  <div class="field">
-    <label for="posX">Position X</label>
-    <input id="posX" type="number" step="0.01" />
-  </div>
+            <hr />
 
-  <div class="field">
-    <label for="posY">Position Y</label>
-    <input id="posY" type="number" step="0.01" />
-  </div>
+            <!-- Position -->
+            <h2>Position</h2>
+            <div class="field">
+                <label for="posX">X</label>
+                <input id="posX" type="number" step="0.01" />
+            </div>
+            <div class="field">
+                <label for="posY">Y</label>
+                <input id="posY" type="number" step="0.01" />
+            </div>
+            <div class="field">
+                <label for="posZ">Z</label>
+                <input id="posZ" type="number" step="0.01" />
+            </div>
 
-  <div class="field">
-    <label for="posZ">Position Z</label>
-    <input id="posZ" type="number" step="0.01" />
-  </div>
-</aside>
+            <!-- Rotation (degrees) -->
+            <h2>Rotation (deg)</h2>
+            <div class="field">
+                <label for="rotX">X</label>
+                <input id="rotX" type="number" step="1" />
+            </div>
+            <div class="field">
+                <label for="rotY">Y</label>
+                <input id="rotY" type="number" step="1" />
+            </div>
+            <div class="field">
+                <label for="rotZ">Z</label>
+                <input id="rotZ" type="number" step="1" />
+            </div>
+
+            <!-- Scale -->
+            <h2>Scale</h2>
+            <div class="field">
+                <label for="sclX">X</label>
+                <input id="sclX" type="number" step="0.01" />
+            </div>
+            <div class="field">
+                <label for="sclY">Y</label>
+                <input id="sclY" type="number" step="0.01" />
+            </div>
+            <div class="field">
+                <label for="sclZ">Z</label>
+                <input id="sclZ" type="number" step="0.01" />
+            </div>
+        </aside>
+
 
     </div>
 
     <script type="module" src="./dist/main.js"></script>
-  </body>
+</body>
+
 </html>
