--- a/index.html
+++ b/index.html
@@ -2,99 +2,43 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
     <title>ThreeJS build-up 02</title>
-    <link rel="stylesheet" href="./src/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            background: #202020;
+            font-family: sans-serif;
+        }
+
+        /* your three.js canvas lives inside here */
+        #viewport {
+            width: 100%;
+            height: 100%;
+            display: block;
+        }
+    </style>
     <script type="importmap">
-    {
-      "imports": {
-        "three": "https://unpkg.com/three@0.161.0/build/three.module.js",
-        "three/examples/jsm/controls/OrbitControls.js":
-          "https://unpkg.com/three@0.161.0/examples/jsm/controls/OrbitControls.js",
-        "three/examples/jsm/controls/TransformControls.js":
-          "https://unpkg.com/three@0.161.0/examples/jsm/controls/TransformControls.js"
-      }
-    }
-    </script>
+{
+  "imports": {
+    "three": "/node_modules/three/build/three.module.js",
+    "three/examples/jsm/": "/node_modules/three/examples/jsm/"
+  }
+}
+</script>
 </head>
 
 <body>
-    <div id="app">
-        <!-- left: 3D viewport -->
-        <div id="viewport">
-            <canvas id="scene"></canvas>
-        </div>
+    <div id="viewport"></div>
 
-        <!-- right: UI panel -->
-        <aside id="ui">
-            <h1>Transform</h1>
-
-            <!-- gizmo modes -->
-            <div id="gizmo-modes" class="mode-buttons">
-                <button data-mode="translate" class="active">Move</button>
-                <button data-mode="rotate">Rotate</button>
-                <button data-mode="scale">Scale</button>
-            </div>
-
-            <!-- gizmo space -->
-            <div id="gizmo-space" class="mode-buttons">
-                <button data-space="world" class="active">World</button>
-                <button data-space="local">Local</button>
-            </div>
-
-            <hr />
-
-            <!-- Position -->
-            <h2>Position</h2>
-            <div class="field">
-                <label for="posX">X</label>
-                <input id="posX" type="number" step="0.01" />
-            </div>
-            <div class="field">
-                <label for="posY">Y</label>
-                <input id="posY" type="number" step="0.01" />
-            </div>
-            <div class="field">
-                <label for="posZ">Z</label>
-                <input id="posZ" type="number" step="0.01" />
-            </div>
-
-            <!-- Rotation (degrees) -->
-            <h2>Rotation (deg)</h2>
-            <div class="field">
-                <label for="rotX">X</label>
-                <input id="rotX" type="number" step="1" />
-            </div>
-            <div class="field">
-                <label for="rotY">Y</label>
-                <input id="rotY" type="number" step="1" />
-            </div>
-            <div class="field">
-                <label for="rotZ">Z</label>
-                <input id="rotZ" type="number" step="1" />
-            </div>
-
-            <!-- Scale -->
-            <h2>Scale</h2>
-            <div class="field">
-                <label for="sclX">X</label>
-                <input id="sclX" type="number" step="0.01" />
-            </div>
-            <div class="field">
-                <label for="sclY">Y</label>
-                <input id="sclY" type="number" step="0.01" />
-            </div>
-            <div class="field">
-                <label for="sclZ">Z</label>
-                <input id="sclZ" type="number" step="0.01" />
-            </div>
-        </aside>
-
-
-    </div>
-
-    <script type="module" src="./dist/main.js"></script>
+    <!-- IMPORTANT: this points to the compiled JS -->
+    <script type="module" src="/dist/main.js"></script>
 </body>
 
 </html>
