--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 {
   "imports": {
     "three": "/node_modules/three/build/three.module.js",
-    "three/examples/jsm/": "/node_modules/three/examples/jsm/"
+        "three/addons/": "/node_modules/three/examples/jsm/"
   }
 }
 </script>
